# aaop

./: .env.example  .gitignore  .pre-commit-config.yaml  API_CONTRACTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  UI_SYSTEM.md  pyproject.toml
.github/workflows/: ci.yml
apps/admin_governance/: admin_governance.spec.md  agent.py  config.py  prompts.py  schemas.py  seed.py  tools.py
apps/ai_lab/: agent.py  ai_lab.spec.md  config.py  prompts.py  schemas.py  seed.py  tools.py
apps/alert_center/: agent.py  alert_center.spec.md  config.py  prompts.py  schemas.py  tools.py
apps/capacity_cost/: agent.py  capacity_cost.spec.md  config.py  prompts.py  schemas.py  seed.py  tools.py
apps/devops_assistant/: agent.py  config.py  devops_assistant.spec.md  prompts.py  schemas.py  seed.py  tools.py
apps/growth_retention/: agent.py  config.py  growth_retention.spec.md  prompts.py  schemas.py  seed.py  tools.py
apps/knowledge_base/: agent.py  config.py  knowledge_base.spec.md  prompts.py  schemas.py  seed.py  tools.py
apps/live_intelligence/: agent.py  config.py  live_intelligence.spec.md  prompts.py  schemas.py  seed.py  tools.py
apps/log_analyzer/: agent.py  config.py  log_analyzer.spec.md  prompts.py  schemas.py  tools.py
apps/mock_data_gen/: mock_data_gen_spec.md  requirements.txt  run_all.py  validate.py
apps/ops_center/: agent.py  config.py  ops_center.spec.md  prompts.py  (+3 more)
backend/: auth.py  dependencies.py  main.py
docs/: AUDIT_REPORT.md  DATA_FLOW.md  DOC_GAP_REPORT.md  SPRINT_PLAN.md  SWAGGER_GUIDE.md  data_audit_report.md  data_audit_report_v2.md  openapi.json
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
scripts/: data_audit.py  fix_data_quality.py  migrate_tenant_data.py  seed_demo_tenants.py
shared/: SHARED_MODULES.md  event_bus.py  llm_gateway.py
tests/: conftest.py
(+284 files in other folders)
